--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <title>Counter</title>
+    <title></title>
 </head>
 
 <style>
@@ -50,39 +50,42 @@
                 <h1 class="m-0 p-0">{{secondsLeft}}</h1>
                 <p class="m-0 p-0">second<span v-if="secondsLeft != 1">s</span></p>
             </div>
-{{timeLeftJSONnew}}
         </div>
+
     </div>
 
     <script>
-    Vue.createApp({
-        data() {
-            return {
-                date: new Date(),
-                lastDay: new Date('December 17, 2021 16:00:00'),
+        Vue.createApp({
+            data() {
+                return {
+                    date: new Date(),
+                    lastDay: new Date('December 17, 2021 16:00:00'),
+                }
+            },
+            computed: {
+                timeLeft() { return this.lastDay - this.date },
+                monthsLeft() { return this.timeLeft > 1000 ? this.getTimes()[2] - 1 : 0 },
+                daysLeft() { return this.timeLeft > 1000 ? this.getTimes()[3] - 1 : 0 },
+                hoursLeft() { return this.timeLeft > 1000 ? this.getTimes()[4] : "00" },
+                minutesLeft() { return this.timeLeft > 1000 ? this.getTimes()[5] : "00" },
+                secondsLeft() { return this.timeLeft > 1000 ? this.getTimes()[6] : "00" },
+            },
+            methods: {
+                getTimes() {
+                    var myRe = new RegExp(/(\d{4})-(\d{2})-(\d{2})T(\d{2}):(\d{2}):(\d{2})/);
+                    var timeLeftJSON = new Date(this.lastDay - this.date).toJSON()
+                    return timeLeftJSON.match(myRe)
+                }
+            },
+            mounted() {
+                var interval = setInterval(() => { 
+                    if (this.timeLeft > 1000){
+                     this.date = new Date(); 
+                     document.title= `${this.monthsLeft}m ${this.daysLeft}d ${this.hoursLeft}:${this.minutesLeft}:${this.secondsLeft}`} 
+                     else window.clearInterval(interval) 
+                    }, 1000)
             }
-        },
-        computed: {
-            timeLeft() { return this.lastDay - this.date},
-            timeLeftJSON() { return new Date(this.lastDay - this.date).toJSON() },
-            monthsLeft() { return this.timeLeft > 1000 ? this.getTimes()[2] - 1 : 0 },
-            daysLeft() { return this.timeLeft > 1000 ? this.getTimes()[3] - 1 : 0 },
-            hoursLeft() { return this.timeLeft > 1000 ? this.getTimes()[4] : "00" },
-            minutesLeft() { return this.timeLeft > 1000 ? this.getTimes()[5] : "00" },
-            secondsLeft() { return this.timeLeft > 1000 ? this.getTimes()[6] : "00" },
-        },
-        methods: {
-            getTimes() {
-                var myRe = new RegExp(/(\d{4})-(\d{2})-(\d{2})T(\d{2}):(\d{2}):(\d{2})/);
-                return this.timeLeftJSON.match(myRe)
-            }
-        },
-        mounted() {
-            var interval = setInterval(() => { if (this.timeLeft > 1000) { this.date = new Date() } else window.clearInterval(interval) }, 1000)
-        }
-    }
-    ).mount("#app")
-
+        }).mount("#app")
     </script>
 
 </body>
